<resources>
    <string name="app_name">Momentum2</string>
    <string name="title_activity_login">Momentum</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password_es">Password</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in_en">Sign in or register</string>
    <string name="action_sign_in">Inicia sesión</string>
    <string name="action_register">Registrarse</string>
    <string name="empty_list">No hay momentos cargados</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_short_es">Inicia sesión</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username_en">Not a valid username</string>
    <string name="invalid_username">No es una cuenta válida</string>
    <string name="invalid_password_en">Password must be more to 5 characters</string>
    <string name="invalid_password">La contraseña debe contener mas de 5 caracteres </string>
    <string name="login_failed_en">"Login failed"</string>
    <string name="login_failed">"Sesión fallida"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>
    <string name="camera_error">Error en la camara</string>
    <string name="menu_transform">Momentos</string>
    <string name="menu_reflow">Detalles</string>
    <string name="descripcion">Descripción (máximo 140 caracteres)</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Configuraciones</string>
    <string name="momentos">Configuraciones</string>

    <string name="logout">Cerrar sesión</string>
    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_guardar_momento">GuardarMomento</string>
    <string name="title_activity_contacto">ContactoActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Momentos</string>
    <string name="tab_text_2">Buscar</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="view_momento">Ver momento</string>
    <string name="title_activity_momento">MomentoActivity</string>
    <string name="title_activity_edit_descripcion">EditDescripcion</string>
    <string name="empty_list_description">No hay momentos cargados</string>
</resources>